--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,4 +1,8 @@
-.Page {
+.HomePage {
+  text-align: center;
+}
+
+.HomePage-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
